Working Convexity Measure
Added convexity_metric.jl which calculates the convexity measure and plots data.

Uses hit_and_run.jl as the input for the sample_nonconvex_space() function, which is a basic implementation of hit and run sampling algorithm.

Further improvements are needed for the hit and run implementation, however it is operable for the current test cases.

--- a/Project.toml
+++ b/Project.toml
@@ -37,6 +37,7 @@ SparsityDetection = "684fba80-ace3-11e9-3d08-3bc7ed6f96df"
 SpecialFunctions = "276daf66-3868-5448-9aa4-cd146d93841b"
 StatProfilerHTML = "a8a75453-ed82-57c9-9e16-4cd1196ecbf5"
 Suppressor = "fd094767-a336-5f1f-9728-57cf17d0bbfb"
+Symbolics = "0c5d862f-8b57-4792-8d23-62f2024744c7"
 TerminalLoggers = "5d786b92-1e48-4d6f-9151-6b4477ca9bed"
 UpdateJulia = "770da0de-323d-4d28-9202-0e205c1e0aff"
 libcxxwrap_julia_jll = "3eaa8342-bff7-56a5-9981-c04077f7cee7"
